--- a/TileTest/TileTest/MainPage.xaml
+++ b/TileTest/TileTest/MainPage.xaml
@@ -1,24 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:xaml="clr-namespace:Mapsui.UI.Forms;assembly=Mapsui.UI.Forms"
              x:Class="TileTest.MainPage">
 
-    <StackLayout>
-        <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
-            <Label Text="Welcome to Xamarin.Forms!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
-        </Frame>
-        <Label Text="Start developing now" FontSize="Title" Padding="30,10,30,10"/>
-        <Label Text="Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!" FontSize="16" Padding="30,0,30,0"/>
-        <Label FontSize="16" Padding="30,24,30,0">
-            <Label.FormattedText>
-                <FormattedString>
-                    <FormattedString.Spans>
-                        <Span Text="Learn more at "/>
-                        <Span Text="https://aka.ms/xamarin-quickstart" FontAttributes="Bold"/>
-                    </FormattedString.Spans>
-                </FormattedString>
-            </Label.FormattedText>
-        </Label>
-    </StackLayout>
+    <Grid RowDefinitions="10*,90*">
+        <Grid Grid.Row="0" VerticalOptions="Start" Background="sc#0.3,1,1,1">
+            <Picker VerticalOptions="Start" HorizontalOptions="End" WidthRequest="206" Margin="40,10,40,0" SelectedIndex="0" x:Name="styleBox" SelectedIndexChanged="styleBox_SelectedIndexChanged" />
+        </Grid>
+
+        <xaml:MapControl Grid.Row="1" x:Name="MyMapControl"></xaml:MapControl>
+    </Grid>
 
 </ContentPage>
